--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "mongoose": "^6.6.5",
+    "nodejs-nodemailer-outlook": "^1.2.4",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
   }
 }
