cards hover update

--- a/client/src/.env
+++ b/client/src/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_FORM=http://localhost:3001/api/form
-REACT_APP_API_CV=http//localhost:3001/api/Cv
+REACT_APP_API_FORM=http://localhost:3001/api/forms
+REACT_APP_API_CV=http//localhost:3001/api/cvs
